# 4800-CrypTrader

./: .accesstoken.txt.un~  .gitignore  .gitmodules  Cargo.toml  README.md  accesstoken.txt  account_balance.json  barbertc-aws.pem  open_orders.json  ticker.json
cryp-trader/: Cargo.toml  creds.json  data.json  out.json  ticker.json
cryp-trader-web/client/src/: App.js
cryp-trader-web/rust-server/: Cargo.toml
cryp-trader-web/rust-server/src/: main.rs
cryp-trader/src/: main.rs
fullstack_application/: package-lock.json  package.json
fullstack_application/node_backend/: .gitignore  index.js  package-lock.json  package.json  passport-config.js
fullstack_application/node_backend/config/: keys.js  passport.js
fullstack_application/node_backend/models/: User.js
fullstack_application/node_backend/validation/: login.js  register.js
fullstack_application/node_backend/views/: index.ejs  login.ejs  register.ejs
fullstack_application/react_client/: package-lock.json  package.json
fullstack_application/react_client/public/: index.html
fullstack_application/rust_prog/: Cargo.toml
legacy-rust-outputs/: buy.json  ticker.json
medium-react-wasm-intro/react-client/: package-lock.json  package.json
medium-react-wasm-intro/wasm/: Cargo.toml
medium-react-wasm-intro/wasm-build/: wasm_bg.js
medium-react-wasm-intro/wasm/src/: creds.json  lib.rs
mern-auth/: .gitignore  cargo-build.sh  creds-caleb.json  nodemon.json  package.json  server.js
mern-auth/client/: config-overrides.js  package.json
mern-auth/config/: keys.js  passport.js
mern-auth/models/: User.js
mern-auth/rust-app/: Cargo.toml
mern-auth/rust-app/src/: lib.rs
mern-auth/rust-functions/: index.js
mern-auth/validation/: register.js
rocket-tutty/: Cargo.toml
rocket-tutty/src/: lib.rs  main.rs
rocket-tutty/src/data/: db.rs
rocket-tutty/src/routes/: ping.rs  user.rs
rocket-tutty/tests/: basic_test.rs
rocket-tutty/tests/common/: mod.rs
sample-wasm/: Cargo.toml  LICENSE_MIT
sample-wasm/src/: lib.rs
sample-wasm/www/: index.html  index.js  package-lock.json  package.json
src/: .main.rs.swo  .main.rs.swp  main.rs
webbie/: package-lock.json
webbie/static/: styles.scss
yew-app/: Cargo.toml
yew-app/src/: lib.rs
(+32 files in other folders)
