[package]
name = "cryp-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krakenrs = "5.2.3"
log = "0.4.14"
serde = "1.0.136"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde_json = "1.0.78" 
serde_derive = "1.0.136"