[package]
name = "rocket-tutty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.4"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["helmet", "uuid"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
