[package]
name = "wasm"
version = "0.1.0"
authors = ["Caleb Barber <barbertc@appstate.edu>", "Zach Stermon <stermonzl@appstate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34" 
krakenrs = "5.2.3"
serde_json = "1.0.79" 
serde_derive = "1.0.136"
