[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
krakenrs = "5.2.3"
serde_json = "1.0.79"
serde_derive = "1.0.136"
log = "0.4.14"
serde = "1.0.136"
structopt = "0.3.26"
displaydoc = "0.2.3"
colored = "2.0.0"
cstring = "0.1.1" 
ffi = "0.0.2"